# synthesus-knowledge-cloud

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
artifacts/: faiss.index  faiss_metadata.json  knowledge.kndb  knowledge.kndb.meta.db  knowledge.meta.db  manifest.json
artifacts/knowledge_cloud/: chaining_patterns.json  learned_transitions.json  transitions.json  (+1 more)
docs/: BOOTSTRAP.md  BUILD.md  DATA_MODEL.md  INTEGRATION.md  MIRRORS.md  PACKAGE_CLI.md  PIPELINE_ROADMAP.md  PROVENANCE.md  REBUILDING.md  SOURCES.md
grounding_corpus/: agent_abilities_v1.txt  aivm_compendium.txt  kaggle_grounding_v1.txt  massive_coding_v1.txt  massive_grounding_v1.txt  samsung_firmware_notes.txt  unified_grounding_v1.txt  world_building_v1.txt
manifests/: source_manifest.json
profiles/: full-local.yaml  hardware-emulation.yaml  npc-narrative.yaml  public-base.yaml
scripts/: build_source_manifest.py  sync_knowledge_cloud.py  validate_bundle.py  validate_source_planes.py
sources/: conceptnet.yaml  datasets.yaml  huggingface.yaml  jeopardy.yaml  kaggle.yaml
support_models/: chat_policy_prior.pkl  enrichment_r2_checkpoint.json  migration_checkpoint.json  parameter_cloud.json  parameter_cloud_v2_stats.json  vocab_general.pkl  vocab_gm_dialogue.pkl  vocab_sysops.pkl
synthesus_knowledge_cloud/: __init__.py  __main__.py  bootstrap.py  build.py  manifest.py  mirrors.py  profiles.py  provenance.py  serve.py  source_planes.py  status.py  sync.py
tests/: test_build.py  test_cli.py  test_provenance.py  test_status.py  test_sync.py
(+82 files in other folders)
